--- a/BlazorEcommerce/Client/Shared/ProductList.razor
+++ b/BlazorEcommerce/Client/Shared/ProductList.razor
@@ -28,9 +28,9 @@
 
     protected override async Task OnInitializedAsync()
     {
-        var result = await Http.GetFromJsonAsync<List<Product>>("api/Product");
+        var result = await Http.GetFromJsonAsync<ServiceResponse<List<Product>>>("api/Product");
 
-        if (result is not null)
-            Products = result;
+        if (result is not null && result.Data is not null)
+            Products = result.Data;
     }
 }
