--- a/BlazorEcommerce/Client/Shared/ProductList.razor
+++ b/BlazorEcommerce/Client/Shared/ProductList.razor
@@ -1,36 +1,41 @@
-﻿@inject HttpClient Http
+﻿@inject IProductService ProductService
 
-<ul class="list-unstyled">
-    @foreach(var product in Products)
-    {
-        <li class="media my-3">
-            <div class="media-img-wrapper mr-2">
-                <a href="#">
-                    <img class="media-img" src="@product.ImageUrl" alt="@product.Title"/>
-                </a>
-            </div>
-            <div class="media-body">
-                <a href="#">
-                    <h4 class="mb-0">@product.Title</h4>
-                </a>
-                <p>@product.Description</p>
-                <h5 class="price">
-                    $@product.Price
-                </h5>
+@if (ProductService.Products is null || !ProductService.Products.Any())
+{
+    <span>Loading Products..</span>
+}
+else
+{
+    <ul class="list-unstyled">
+        @foreach (var product in ProductService.Products)
+        {
+            <li class="media my-3">
+                <div class="media-img-wrapper mr-2">
+                    <a href="#">
+                        <img class="media-img" src="@product.ImageUrl" alt="@product.Title" />
+                    </a>
+                </div>
+                <div class="media-body">
+                    <a href="#">
+                        <h4 class="mb-0">@product.Title</h4>
+                    </a>
+                    <p>@product.Description</p>
+                    <h5 class="price">
+                        $@product.Price
+                    </h5>
 
-            </div>
-        </li>
-    }
-</ul>
+                </div>
+            </li>
+        }
+    </ul>
+
+}
+
 
 @code {
-    private static List<Product> Products = new();
 
     protected override async Task OnInitializedAsync()
     {
-        var result = await Http.GetFromJsonAsync<ServiceResponse<List<Product>>>("api/Product");
-
-        if (result is not null && result.Data is not null)
-            Products = result.Data;
+        await ProductService.GetProducts();
     }
 }
