--- a/BlazorEcommerce/Client/Shared/ProductList.razor
+++ b/BlazorEcommerce/Client/Shared/ProductList.razor
@@ -1,4 +1,5 @@
 ﻿@inject IProductService ProductService
+@implements IDisposable
 
 @if (ProductService.Products is null || !ProductService.Products.Any())
 {
@@ -34,8 +35,13 @@ else
 
 @code {
 
-    protected override async Task OnInitializedAsync()
+    protected override void OnInitialized()
     {
-        await ProductService.GetProducts();
+        ProductService.ProductsChanged += StateHasChanged;
+    }
+
+    public void Dispose()
+    {
+        ProductService.ProductsChanged -= StateHasChanged;
     }
 }
