--- a/BlazorEcommerce/Client/Pages/ProductDetails.razor
+++ b/BlazorEcommerce/Client/Pages/ProductDetails.razor
@@ -1,7 +1,7 @@
 ﻿@page "/product/{id:int}"
 @inject IProductService ProductService
 
-@if(product is null)
+@if (product is null)
 {
     <span>@message</span>
 }
@@ -9,14 +9,24 @@ else
 {
     <div class="media">
         <div class="media-img-wrapper mr-2">
-            <img class="media-img" src="@product.ImageUrl" alt="@product.Title"/>
+            <img class="media-img" src="@product.ImageUrl" alt="@product.Title" />
         </div>
         <div class="media-body">
             <h2 class="mb-0">@product.Title</h2>
             <p>@product.Description</p>
-            <h4 class="price">
-                @*$@product.Price*@
-            </h4>
+            @if (GetSelectedVariant() is not null)
+            {
+                @if (GetSelectedVariant().OriginalPrice > GetSelectedVariant().Price)
+                {
+                    <h6 class="text-muted original-price">
+                        $@GetSelectedVariant().OriginalPrice
+                    </h6>
+                }
+
+                <h4 class="price">
+                    $@GetSelectedVariant().Price
+                </h4>
+            }
         </div>
     </div>
 }
@@ -25,6 +35,7 @@ else
 @code {
     private Product? product = null;
     private string message = string.Empty;
+    private int currentTypeId = 1;
 
     [Parameter]
     public int Id { get; set; }
@@ -41,6 +52,14 @@ else
         else
         {
             product = result.Data;
+            if (product.Variants.Count > 0)
+                currentTypeId = product.Variants[0].ProductTypeId;
         }
+    }
+
+    private ProductVariant GetSelectedVariant()
+    {
+        var variant = product.Variants.FirstOrDefault(v => v.ProductTypeId == currentTypeId);
+        return variant;
     }
 }
