Add Search Methods to the Client

--- a/BlazorEcommerce/Client/Shared/ProductList.razor
+++ b/BlazorEcommerce/Client/Shared/ProductList.razor
@@ -3,7 +3,7 @@
 
 @if (ProductService.Products is null || !ProductService.Products.Any())
 {
-    <span>Loading Products..</span>
+    <span>@ProductService.Message</span>
 }
 else
 {
