Show Featured products with a new Component

--- a/BlazorEcommerce/Client/Pages/Index.razor
+++ b/BlazorEcommerce/Client/Pages/Index.razor
@@ -4,8 +4,15 @@
 @inject IProductService ProductService
 
 <PageTitle>My Shop</PageTitle>
+@if(SearchText is null && CategoryUrl is null)
+{
+    <FeaturedProducts/>
+}
+else
+{
+    <ProductList/>    
+}
 
-<ProductList/>
 
 @code{
     [Parameter]
