--- a/BlazorEcommerce/Client/Pages/Index.razor
+++ b/BlazorEcommerce/Client/Pages/Index.razor
@@ -1,30 +1,33 @@
 ﻿@page "/"
-@page "/search/{searchText}"
+@page "/search/{searchText}/{page:int}"
 @page "/{categoryUrl}"
 @inject IProductService ProductService
 
 <PageTitle>My Shop</PageTitle>
-@if(SearchText is null && CategoryUrl is null)
+@if (SearchText is null && CategoryUrl is null)
 {
-    <FeaturedProducts/>
+    <FeaturedProducts />
 }
 else
 {
-    <ProductList/>    
+    <ProductList />
 }
 
 
-@code{
+@code {
     [Parameter]
     public string? CategoryUrl { get; set; } = null;
 
     [Parameter]
     public string? SearchText { get; set; } = null;
 
+    [Parameter]
+    public int Page { get; set; } = 1;
+
     protected override async Task OnParametersSetAsync()
     {
         if (SearchText is not null)
-            await ProductService.SearchProducts(SearchText);
+            await ProductService.SearchProducts(SearchText, Page);
         else
             await ProductService.GetProducts(CategoryUrl);
     }
