--- a/BlazorEcommerce/Client/Pages/Cart.razor.css
+++ b/BlazorEcommerce/Client/Pages/Cart.razor.css
@@ -31,6 +31,10 @@
     font-size: 12px;
 }
 
-.btn-delete:hover {
-    text-decoration: underline;
+    .btn-delete:hover {
+        text-decoration: underline;
+    }
+
+.input-quantity {
+    width: 70px;
 }
