Create the user registration page

--- a/BlazorEcommerce/Client/Shared/ShopLayout.razor
+++ b/BlazorEcommerce/Client/Shared/ShopLayout.razor
@@ -5,8 +5,9 @@
     <main>
         <div class="top-row px-4">
             <HomeButton/>
-            <Search />
-            <CartCounter />
+            <Search/>
+            <UserButton/>
+            <CartCounter/>
         </div>
 
         <div class="nav-menu">
